starting js framework

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-   <div class="container">
+   <div class="container" id="container">
+
+<!--     
         <div class="boxing">1</div>
         <div class="boxing">2</div>
         <div class="boxing">3</div>
@@ -26,6 +28,261 @@
         <div class="boxing">15</div>
         <div class="boxing">16</div>
 
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div>
+
+        <div class="boxing">1</div>
+        <div class="boxing">2</div>
+        <div class="boxing">3</div>
+        <div class="boxing">4</div>
+        <div class="boxing">5</div>
+        <div class="boxing">6</div>
+        <div class="boxing">7</div>
+        <div class="boxing">8</div>
+        <div class="boxing">9</div>
+        <div class="boxing">10</div>
+        <div class="boxing">11</div>
+        <div class="boxing">12</div>
+        <div class="boxing">13</div>
+        <div class="boxing">14</div>
+        <div class="boxing">15</div>
+        <div class="boxing">16</div> -->
+
 
 
 
@@ -42,12 +299,43 @@
 
 
 
+// const div = document.createElement('div');
+// div.innerText = "my new skill - DOM maniuplation!";
+
+// // set style
+// div.style.width = "1000px";
+// // better to use CSS though - just set class
+// div.setAttribute('class', 'myclass'); // and make sure myclass has some styles in css
+// const element = document.getElementById("container");
+// // element.document.div.appendChild(div);
+// document.getElementById("container").appendChild(div);
+
+// console.log(div);
+
+
+
+var div = document.createElement("div");
+// div.style.width = "100px";
+// div.style.height = "100px";
+// div.style.background = "red";
+// div.style.color = "white";
+// div.innerHTML = "Hello";
+
+// document.getElementById("container").appendChild(div);
+// document.body.appendChild(div);
 
 
 
 
+let container = document.getElementById('container');
 
-
+    for (let i = 0; i < 256; i++) 
+    {
+        let divaluehere = document.createElement('div');
+        divaluehere.setAttribute('class', 'boxing');
+        container.appendChild(divaluehere);
+        
+    };
 
 
 
