added page description and links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   
    </div>
 
-
+   <div class="footer">Etch-A-Sketch</div>
+   <div><p class="kevan"><a href="https://github.com/kevankas">Designed by Kevan <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="github-logo">
+</a></p></div>
 
 
 
